--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-     <h1 class="main-heading">🌤 मौसम सेतु | Mausam Setu 🌤</h1>
+     <h1 class="main-heading">मौसमSetu 🌤</h1>
   <div class="box">
     <div class="search">
       <input type="text" id="cityInput" placeholder="शहर का नाम खोजें / Search City">
